--- a/launch_ray.ipynb
+++ b/launch_ray.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -50,14 +50,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "def space_to_node(x,y):\n"
+    "def space_to_node(space_x,space_y):\n",
+    "    node_x = (space_x - x_space_min) / (x_space_max - x_space_min)\n",
+    "    node_y = (space_y - y_space_min) / (y_space_max - y_space_min)\n",
+    "    return node_x, node_y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +119,7 @@
     }
    ],
    "source": [
-    "plt.imshow(beams[0])"
+    "plt.imshow(z)"
    ]
   },
   {
@@ -145,12 +146,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "b72571793efd48d9a4f97545d2af769f95c388970848c0e45b758d9b1a03763e"
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
    }
   }
  },
