added Vector class

--- a/launch_ray.ipynb
+++ b/launch_ray.ipynb
@@ -12,6 +12,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Vector:\n",
+    "    def __init__(self, x, y, ray_profile, angle) -> None:\n",
+    "        self.spatial_x = x\n",
+    "        self.spatial_y = y\n",
+    "        self.magnitude = ray_profile\n",
+    "        self.direction = angle"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -82,10 +96,7 @@
     "laser_profile = scale_factor * np.exp(-(profile_range/10)**4)\n",
     "\n",
     "beams = list()\n",
-    "for beam_normal in beam_normal_directions:\n",
-    "    i_values = np.cos(beam_normal) * laser_profile\n",
-    "    j_values = np.sin(beam_normal) * laser_profile\n",
-    "    beams.append(list(zip(i_values, j_values)))\n",
+    "\n",
     "\n",
     "plt.plot(profile_range,laser_profile)\n",
     "ax = plt.gca()\n",
@@ -146,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
