reconstruction of crossings from curve

--- a/bezier_estimates.ipynb
+++ b/bezier_estimates.ipynb
@@ -9,9 +9,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.bezier as bezier\n",
-    "from scipy.special import comb\n",
-    "\n",
-    "%matplotlib inline"
+    "from scipy.special import comb"
    ]
   },
   {
@@ -189,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
